Fix horizontal scrolling

--- a/public/css/statik.styl
+++ b/public/css/statik.styl
@@ -16,20 +16,23 @@ body
   font-family "Open Sans", sans-serif
 
 header
-  position fixed
-  top 0
-  left 0
-  height $header-height
-
-header
 footer
   width 100%
   padding 0 15px
   margin 0
   z-index 1020
 
+header
+  position fixed
+  top 0
+  left 0
+  height $header-height
+
 footer
-  margin-left $sidebar-width
+  position fixed
+  left 0
+  bottom 0
+  padding-left $sidebar-width
 
 aside
   position fixed
@@ -50,6 +53,6 @@ nav.ui.vertical.menu
 
 main
   margin 0
-  margin-top $header-height
-  margin-left $sidebar-width
+  padding-top $header-height
+  padding-left $sidebar-width
   z-index 1000
